openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
spec:
  selector:
    app: flask-app
  ports:
    - name: http
      port: 8080
      targetPort: 5000
